apps/vibe-media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vibe-media
  labels:
    app: vibe-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vibe-media
  template:
    metadata:
      labels:
        app: vibe-media
    spec:
      containers:
        - name: web
          image: jameshyphen/vibe-media:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
